Complete exercise; check catch((error)

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,2 +1,18 @@
 body {
-  background-color: blue; }
+  background-color: white; }
+  body h1 {
+    color: green;
+    text-align: center; }
+
+.search-bar {
+  width: 50%;
+  background-color: pink;
+  text-align: center; }
+
+#output img {
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+  display: inline-block;
+  border-radius: 100%;
+  /* Makes imgaes cirlces instead of sqaures */ }
