--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,23 @@
 body {
-	background-color: blue;
+	background-color: white;
+	h1 {
+		color: green;
+		text-align: center;
+	}
+}
+
+.search-bar {
+	width: 50%;
+	background-color: pink;
+	text-align: center;
+}
+
+#output {
+	img {
+		height: 100px;
+		width: 100px;
+		margin: 5px;
+		display: inline-block;
+		border-radius: 100%; /* Makes imgaes cirlces instead of sqaures */
+	}
 }
